# quran-hackathon

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyrightconfig.json
.agents/skills/backend-coding-standards/: SKILL.md
.agents/skills/frontend-coding-standards/: SKILL.md
.agents/skills/quran-domain/: SKILL.md
.agents/skills/rag-patterns/: SKILL.md
.agents/skills/services-architecture/: SKILL.md
.agents/skills/supabase-migrations/: SKILL.md
.claude/: settings.local.json
.claude/skills/backend-coding-standards/: SKILL.md
.claude/skills/supabase-migrations/: SKILL.md
.github/workflows/: ci.yml
backend/: .env.example  Makefile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/tests/: test_health.py
frontend/: .env.example  .prettierignore  AGENTS.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/hooks/: useAdminMode.tsx  useCommandPalette.ts  useDeepResearchTimer.ts  useFeatureFlag.ts  useFeatureFlags.tsx  useJournalMode.tsx  useOnOutsideInteraction.ts  usePreferences.tsx  useRovingFocus.ts  useSlashMenu.ts  useToast.ts
frontend/src/lib/: arabic-numerals.ts  chat-store.ts  clipboard.ts  command-palette-store.ts  context-panel-store.ts  copy.ts  dismissal-store.ts  feature-flags.ts  flags.tsx  fonts.ts  help-overlay-store.ts  inline-suggestions.ts  journal-mode-store.ts  kbd.ts  markdown.ts  note-connections.ts  notes-store.ts  notifications-store.ts  onboarding-step-store.ts  preferences-bootstrap.ts  (+11 more)
scripts/: seed_quran.py
supabase/: config.toml
supabase/migrations/: 20250101000100_utilities.sql  20250101000200_quran_reference.sql  20250101000300_translations.sql  20250101000500_tafsir_rag.sql  20250101000600_profiles.sql  20250101000900_journals.sql  20250101001000_ai_conversations.sql  20250101001100_rls_policies.sql  20260502100001_create_extensions.sql  20260502100003_create_quran_reference.sql  20260502100004_create_translations.sql  20260502100005_create_tafsirs.sql  20260502100006_create_tafsir_rag.sql  20260502100007_create_profiles.sql  20260502100008_create_user_preferences.sql  20260502100009_create_reading_artifacts.sql  20260502100010_create_journals.sql  20260502100011_create_ai_conversations.sql  20260502100012_add_rls_policies.sql  20260502100013_fix_tafsir_embedding_dim.sql  20260502100014_create_match_tafsir_chunks_rpc.sql  20260502120000_fix_tafsir_embedding_dim.sql  README.md
(+148 files in other folders)
